--- a/index.html
+++ b/index.html
@@ -35,12 +35,24 @@
               position: absolute;
               top: 21%;
               left: 31.5%;
+              width: 37.1%; 
+              height: 39%;
           }
           
           #twitchchat {
               position: absolute;
-              top: 61%;
+              top: 60%;
               left: 31.5%;
+              width: 37.1%; 
+              height: 40%;
+          }
+          
+          #youtube {
+              position: absolute;
+              top: 21%;
+              left: 68.45%;
+              width: 31.25%; 
+              height: 60%;
           }
   
           li {
@@ -64,13 +76,14 @@
             <li><a href="/pettertale">Pettertale</a></li>
         </ul>
 
-        <iframe id="twitch" src="https://player.twitch.tv/?channel=atillabosma" frameborder="0" scrolling="no" height="378" width="620"></iframe>
-        <iframe id="twitchchat" src="https://www.twitch.tv/atillabosma/chat?popout=" frameborder="0" scrolling="no" height="370" width="620"></iframe>
+        <iframe id="twitch" src="https://player.twitch.tv/?channel=atillabosma" frameborder="0" scrolling="no"></iframe>
+        <iframe id="twitchchat" src="https://www.twitch.tv/atillabosma/chat?popout=" frameborder="0" scrolling="no"></iframe>
         <script src="scripts/twitterscript.js"></script>
 
         <div id="twitter"><a class="twitter-timeline" href="https://twitter.com/Atilla_Bosma" data-widget-id="587032631709163520">Tweets door @Atilla_Bosma</a>
             <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         </div>
+        <iframe id="youtube" src="http://www.youtube.com/embed/?listType=user_uploads&list=atillabosma"></iframe>
 
     </body>
 </html>
