--- a/TopPlayers/index.html
+++ b/TopPlayers/index.html
@@ -8,11 +8,19 @@
     <meta name="description" content="homepage">
 
     <meta name="author" content="AtillaBosma">
-
-    <link rel="stylesheet" href="css/styles.css?v=1.0">
 </head>
 <body>
     <script src="scripts/jquery.js"></script>
-    <script src="scripts/playerController.js"></script>
+    <script src="scripts/websiteScripts.js"></script>
+    <script src="scripts/controller/playerController.js"></script>
+    <br />Summoner Name
+    <br />
+    <input id="userName" />
+    <input id="submit" type="submit" onclick="summonerLookUp();" />
+    <br />
+
+    <br />Masteries: <br /><span id="sMasteries"></span>
+
+    <br />Masteries ID: <br /><span id="sMasteriesID"></span>
 </body>
 </html>
