--- a/TopPlayers/index.html
+++ b/TopPlayers/index.html
@@ -11,16 +11,16 @@
 </head>
 <body>
     <script src="scripts/jquery.js"></script>
-    <script src="scripts/websiteScripts.js"></script>
     <script src="scripts/controller/playerController.js"></script>
+    <script src="scripts/controller/masteryController.js"></script>
     <br />Summoner Name
     <br />
     <input id="userName" />
     <input id="submit" type="submit" onclick="summonerLookUp();" />
     <br />
 
-    <br />Masteries: <br /><span id="sMasteries"></span>
+    <br /><b>Masteries: <br /></b><span id="sMasteries"></span>
 
-    <br />Masteries ID: <br /><span id="sMasteriesID"></span>
+    <br /><b>Masteries ID: <br /></b><span id="sMasteriesID"></span>
 </body>
 </html>
