--- a/TopPlayers/index.html
+++ b/TopPlayers/index.html
@@ -12,7 +12,7 @@
 <body>
     <script src="scripts/jquery.js"></script>
     <script src="scripts/controller/playerController.js"></script>
-    <script src="scripts/controller/masteryController.js"></script>
+    <img src="images/mpagebg.png" id="mPageBG" alt="masteryPage" style="position:absolute; TOP:30%; LEFT:30%; visibility:hidden">
     <br />Summoner Name
     <br />
     <input id="userName" />
