--- a/TopPlayers/index.html
+++ b/TopPlayers/index.html
@@ -19,7 +19,7 @@
     <input id="submit" type="submit" onclick="summonerLookUp();" />
     <br />
 
-    <br /><b>Masteries: <br /></b><span id="sMasteries"></span>
+    <br /><b>Mastery Pages: <br /></b><span id="sMasteries"></span>
 
     <br /><b>Masteries ID: <br /></b><span id="sMasteriesID"></span>
 </body>
