--- a/statcompare/index.html
+++ b/statcompare/index.html
@@ -13,62 +13,62 @@
         #s1{
             position:absolute;
             top: 12%;
-            left: 7%;
+            left: 5%;
             text-align:center;
         }
         #s2{
             position:absolute;
             top: 12%;
-            left: 14%;
+            left: 25%;
             text-align:center;
         }
         #s3{
             position:absolute;
             top: 12%;
-            left: 21%;
+            left: 45%;
             text-align:center;
         }
         #s4{
             position:absolute;
             top: 12%;
-            left: 28%;
+            left: 65%;
             text-align:center;
         }
         #s5{
             position:absolute;
             top: 12%;
-            left: 35%;
+            left: 85%;
             text-align:center;
         }
-        #s6{
+        #b1{
             position:absolute;
-            top: 12%;
-            left: 42%;
-            text-align:center;
+            top: 44%;
+            left: 8%;
+            visibility:hidden;
         }
-        #s7{
+        #b2{
             position:absolute;
-            top: 12%;
-            left: 49%;
-            text-align:center;
+            top: 44%;
+            left: 28%;
+            visibility:hidden;
         }
-        #s8{
+        #b3{
             position:absolute;
-            top: 12%;
-            left: 56%;
-            text-align:center;
+            top: 44%;
+            left: 48%;
+            visibility:hidden;
         }
-        #s9{
+        #b4{
             position:absolute;
-            top: 12%;
-            left: 63%;
-            text-align:center;
+            top: 44%;
+            left: 68%;
+            visibility:hidden;
         }
-        #s10{
+        #b5{
             position:absolute;
-            top: 12%;
-            left: 70%;
-            text-align:center;
+            top: 44%;
+            left: 88%;
+            visibility:hidden;
         }
     </style>
 </head>
@@ -80,16 +80,15 @@
     <input id="userName" />
     <input id="submit" type="submit" onclick="summonerLookUp();" />
     <br />
-    <br /><s1 id="s1"><b>Summoner 1: <br /><s10 id="s10"><span id="summoner10"></span></s10>
-    </b><span id="summoner1"></span></s1>
+    <br /><s1 id="s1"><b>Summoner 1: <br /></b><span id="summoner1"></span></s1>
     <br /><s2 id="s2"><b>Summoner 2: <br /></b><span id="summoner2"></span></s2>
     <br /><s3 id="s3"><b>Summoner 3: <br /></b><span id="summoner3"></span></s3>
     <br /><s4 id="s4"><b>Summoner 4: <br /></b><span id="summoner4"></span></s4>
     <br /><s5 id="s5"><b>Summoner 5: <br /></b><span id="summoner5"></span></s5>
-    <br /><s6 id="s6"><b>Summoner 6: <br /></b><span id="summoner6"></span></s6>
-    <br /><s7 id="s7"><b>Summoner 7: <br /></b><span id="summoner7"></span></s7>
-    <br /><s8 id="s8"><b>Summoner 8: <br /></b><span id="summoner8"></span></s8>
-    <br /><s9 id="s9"><b>Summoner 9: <br /></b><span id="summoner9"></span></s9>
-    <br /><s10 id="s10"><b>Summoner 10: <br /></b></s10>
+    <br /><button id="b1" type="button" onclick="alert('Hello world!')">Clear</button>
+    <br /><button id="b2" type="button" onclick="alert('Hello world!')">Clear</button>
+    <br /><button id="b3" type="button" onclick="alert('Hello world!')">Clear</button>
+    <br /><button id="b4" type="button" onclick="alert('Hello world!')">Clear</button>
+    <br /><button id="b5" type="button" onclick="alert('Hello world!')">Clear</button>
 </body>
 </html>
