--- a/statcompare/index.html
+++ b/statcompare/index.html
@@ -85,10 +85,10 @@
     <br /><s3 id="s3"><b>Summoner 3: <br /></b><span id="summoner3"></span></s3>
     <br /><s4 id="s4"><b>Summoner 4: <br /></b><span id="summoner4"></span></s4>
     <br /><s5 id="s5"><b>Summoner 5: <br /></b><span id="summoner5"></span></s5>
-    <br /><button id="b1" type="button" onclick="alert('Hello world!')">Clear</button>
-    <br /><button id="b2" type="button" onclick="alert('Hello world!')">Clear</button>
-    <br /><button id="b3" type="button" onclick="alert('Hello world!')">Clear</button>
-    <br /><button id="b4" type="button" onclick="alert('Hello world!')">Clear</button>
-    <br /><button id="b5" type="button" onclick="alert('Hello world!')">Clear</button>
+    <br /><button id="b1" type="button" onclick="clearS1();">Clear</button>
+    <br /><button id="b2" type="button" onclick="clearS2();">Clear</button>
+    <br /><button id="b3" type="button" onclick="clearS3();">Clear</button>
+    <br /><button id="b4" type="button" onclick="clearS4();">Clear</button>
+    <br /><button id="b5" type="button" onclick="clearS5();">Clear</button>
 </body>
 </html>
