deus ex mouse added

--- a/dxhacking/index.html
+++ b/dxhacking/index.html
@@ -17,6 +17,7 @@
     <style>
         body {
             background-color: #070705;
+            cursor:url(images/mouse.png),auto;
         }
     </style>
 </head>
