--- a/new/index.html
+++ b/new/index.html
@@ -30,9 +30,9 @@
 				<nav id="nav">
 					<ul>
 						<li class="active"><a href="index.html">Homepage</a></li>
-						<li><a href="left-sidebar.html">Left Sidebar</a></li>
-						<li><a href="right-sidebar.html">Right Sidebar</a></li>
-						<li><a href="no-sidebar.html">No Sidebar</a></li>
+						<li><a href="/pettertale/index.html">Pettertale</a></li>
+						<li><a href="/dxhacking/index.html">Deus Ex Hacking</a></li>
+						<li><a href="/statcompare/index.html">Statcompare</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -137,7 +137,7 @@
 						<span class="byline">Integer sit amet pede vel arcu aliquet pretium</span>
 					</header>
 					<ul class="contact">
-						<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
+						<li><a href="https://twitter.com/Atilla_Bosma" class="fa fa-twitter"><span>Twitter</span></a></li>
 						<li class="active"><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
 						<li><a href="#" class="fa fa-dribbble"><span>Pinterest</span></a></li>
 						<li><a href="#" class="fa fa-tumblr"><span>Google+</span></a></li>
