--- a/dxhacking/index.html
+++ b/dxhacking/index.html
@@ -4,15 +4,7 @@
     <title></title>
     <meta charset="utf-8" />
     <script src="js/jquery.js"></script>
-    <script src="js/easljs.js"></script>
-    <script src="js/webgl.js"></script>
     <script src="js/createIcons.js"></script>
-
-    <script>
-        function init() {
-            var stage = new createjs.Stage("lineCanvas");
-        }
-    </script>
 
     <style>
         body {
@@ -21,7 +13,7 @@
         }
     </style>
 </head>
-<body onload="init();">
+<body>
 
 </body>
 </html>
