testchanges: - added profile icons to search todo - add rank to search

--- a/statcompare/EUW/index.html
+++ b/statcompare/EUW/index.html
@@ -15,60 +15,70 @@
             top: 12%;
             left: 5%;
             text-align:center;
+            z-index: 1;
         }
         #s2{
             position:absolute;
             top: 12%;
             left: 25%;
             text-align:center;
+            z-index: 1;
         }
         #s3{
             position:absolute;
             top: 12%;
             left: 45%;
             text-align:center;
+            z-index: 1;
         }
         #s4{
             position:absolute;
             top: 12%;
             left: 65%;
             text-align:center;
+            z-index: 1;
         }
         #s5{
             position:absolute;
             top: 12%;
             left: 85%;
             text-align:center;
+            z-index: 1;
         }
         #b1{
             position:absolute;
             top: 55%;
             left: 8%;
             visibility:hidden;
+            z-index: 1;
         }
         #b2{
             position:absolute;
             top: 55%;
             left: 28%;
             visibility:hidden;
+            z-index: 1;
         }
         #b3{
             position:absolute;
             top: 55%;
             left: 48%;
             visibility:hidden;
+            z-index: 1;
         }
         #b4{
             position:absolute;
             top: 55%;
             left: 68%;
             visibility:hidden;
+            z-index: 1;
         }
         #b5{
             position:absolute;
             top: 55%;
             left: 88%;
             visibility:hidden;
+            z-index: 1;
         }
     </style>
 </head>
