Change from different script for every region, to 1 script for all regions. Don't have to change every script for every region for 1 change.

--- a/statcompare/NA/index.html
+++ b/statcompare/NA/index.html
@@ -15,70 +15,80 @@
             top: 12%;
             left: 5%;
             text-align:center;
+            z-index: 1;
         }
         #s2{
             position:absolute;
             top: 12%;
             left: 25%;
             text-align:center;
+            z-index: 1;
         }
         #s3{
             position:absolute;
             top: 12%;
             left: 45%;
             text-align:center;
+            z-index: 1;
         }
         #s4{
             position:absolute;
             top: 12%;
             left: 65%;
             text-align:center;
+            z-index: 1;
         }
         #s5{
             position:absolute;
             top: 12%;
             left: 85%;
             text-align:center;
+            z-index: 1;
         }
         #b1{
             position:absolute;
             top: 55%;
             left: 8%;
             visibility:hidden;
+            z-index: 1;
         }
         #b2{
             position:absolute;
             top: 55%;
             left: 28%;
             visibility:hidden;
+            z-index: 1;
         }
         #b3{
             position:absolute;
             top: 55%;
             left: 48%;
             visibility:hidden;
+            z-index: 1;
         }
         #b4{
             position:absolute;
             top: 55%;
             left: 68%;
             visibility:hidden;
+            z-index: 1;
         }
         #b5{
             position:absolute;
             top: 55%;
             left: 88%;
             visibility:hidden;
+            z-index: 1;
         }
     </style>
 </head>
 <body>
-    <script src="scripts/jquery.js"></script>
-    <script src="scripts/controller/summonerController.js"></script>
+    <script src="../scripts/jquery.js"></script>
+    <script src="../scripts/controller/summonerController.js"></script>
     <br />Summoner Name
     <br />
     <input id="userName" />
-    <input id="submit" type="submit" onclick="summonerLookUp();" />
+    <input id="submit" type="submit" onclick="summonerLookUp('NA');" />
     <br />
     <br /><s1 id="s1"><b>Summoner 1: <br /></b><span id="summoner1"></span></s1>
     <br /><s2 id="s2"><b>Summoner 2: <br /></b><span id="summoner2"></span></s2>
