--- a/scarraslots/index.html
+++ b/scarraslots/index.html
@@ -15,6 +15,11 @@
             left: 5%;
             position:absolute;
         }
+        score {
+            top: 20%;
+            left: 5%;
+            position:absolute;
+        }
         #useMachineButton{
             top:10%;
             left: 3%;
@@ -29,6 +34,7 @@
     <slot3 id="image3"></slot3>
     <button id="useMachineButton" onclick="useMachine()">Roll the dice again!</button>
     <resultText id="resultText"></resultText>
+    <score id="score"></score>
     <script src="scripts/slotScript.js"></script>
 </body>
 </html>
