--- a/BuildAndDestroy/index.html
+++ b/BuildAndDestroy/index.html
@@ -6,7 +6,7 @@
     <title>Unity WebGL Player | TestProject</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/WebAssemblyTest.json");
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/BuildAndDestroy.json");
     </script>
   </head>
   <body>
