--- a/tillycup/index.html
+++ b/tillycup/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="css\bulma.css">
   </head>
   <body>
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+        <div class="navbar-brand">
+                  <!-- navbar items, navbar burger... -->
+        </div>
+    </nav>
   <section class="section">
     <div class="container">
       <h1 class="title">
