--- a/tillycup/index.html
+++ b/tillycup/index.html
@@ -10,11 +10,9 @@
   <body>
     <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
-            <div class="navbar-dropdown">
-                <a class="navbar-item">
-                    Overview
-                </a>
-            </div>
+            <a class="navbar-item">
+                Test
+            </a>
         </div>
     </nav>
   <section class="section">
