--- a/tillycup/index.html
+++ b/tillycup/index.html
@@ -30,7 +30,7 @@
         </section>
         
         <section>
-                <iframe src="http://challonge.com/oamqnnue/module?theme=2" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
+                <iframe src="http://challonge.com/oamqnnue/module" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
         </section>
     </body>
 </html>
