--- a/tillycup/index.html
+++ b/tillycup/index.html
@@ -6,6 +6,7 @@
         <title>Hello Bulma!</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css\bulma.css">
+        <link rel="stylesheet" href="css\stylesheet.css">
         <script src="scripts\jquery-3.2.1.slim.min.js"></script>
         <script src="https://raw.githubusercontent.com/challonge/challonge-jquery-plugin/master/jquery.challonge.js"></script>
     </head>
@@ -30,7 +31,7 @@
         </section>
         
         <section>
-                <iframe src="http://challonge.com/oamqnnue/module" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
+            <iframe src="http://challonge.com/oamqnnue/module" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
         </section>
     </body>
 </html>
