--- a/tillycup/index.html
+++ b/tillycup/index.html
@@ -21,7 +21,8 @@
 
         <section class="section">
             <div class="container">
-                <iframe src="http://challonge.com/oamqnnue/module" width="100%" height="300" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
+                <h3 class="title is-3">Current Bracket</h3>
+                <iframe src="http://challonge.com/oamqnnue/module" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
             </div>
         </section>
     </body>
