--- a/tillycup/index.html
+++ b/tillycup/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="css\bulma.css">
         <link rel="stylesheet" href="css\stylesheet.css">
         <script src="scripts\jquery-3.2.1.slim.min.js"></script>
-        <script src="https://raw.githubusercontent.com/challonge/challonge-jquery-plugin/master/jquery.challonge.js"></script>
+        <script src="scripts\jquery.challonge.js"></script>
     </head>
     <body>
         <section class="section">
