--- a/tillycup/previousbracket.html
+++ b/tillycup/previousbracket.html
@@ -9,13 +9,11 @@
         <link rel="stylesheet" href="css\stylesheet.css">
         <script src="scripts\jquery-3.2.1.slim.min.js"></script>
         <script src="scripts\jquery.challonge.js"></script>
-        <script src="scripts\GetCurrentBracket.js"></script>
+        <script src="scripts\GetPreviousBracket.js"></script>
     </head>
     <body>
         <section class="section">
             <div class="container">
-                <h3 class="title is-3">Current Bracket</h3>
-                <iframe id="current" src="http://challonge.com/oamqnnue/module" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
                 <h3 class="title is-3">Previous Bracket</h3>
                 <iframe id="past" src="http://challonge.com/oamqnnue/module" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
             </div>
