--- a/tillycup/currentbracket.html
+++ b/tillycup/currentbracket.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Hello Bulma!</title>
+        <title>Current Bracket</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css\bulma.css">
         <link rel="stylesheet" href="css\stylesheet.css">
@@ -16,8 +16,6 @@
             <div class="container">
                 <h3 class="title is-3">Current Bracket</h3>
                 <iframe id="current" src="http://challonge.com/oamqnnue/module" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
-                <h3 class="title is-3">Previous Bracket</h3>
-                <iframe id="past" src="http://challonge.com/oamqnnue/module" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
             </div>
         </section>
     </body>
