--- a/tillycup/previousbracket.html
+++ b/tillycup/previousbracket.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Hello Bulma!</title>
+        <title>Previous Bracket</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css\bulma.css">
         <link rel="stylesheet" href="css\stylesheet.css">
