--- a/tillycup/previousbracket.html
+++ b/tillycup/previousbracket.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css\bulma.css">
         <link rel="stylesheet" href="css\stylesheet.css">
-        <script src="scripts\jquery-3.2.1.slim.min.js"></script>
+        <script src="scripts\jquery-3.2.1.js"></script>
         <script src="scripts\jquery.challonge.js"></script>
         <script src="scripts\GetPreviousBracket.js"></script>
     </head>
