--- a/index.html
+++ b/index.html
@@ -13,77 +13,12 @@
       <link rel="stylesheet" href="css/styles.css?v=1.0">
 
       <style>
-
-          body {
-            background-image: url(images/background.png);
-            background-repeat: repeat;
-          }
-
-          h1 {
-            color: white;
-            text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-            text-align: center;
-            font-size: 50px;
-          }
-  
-          #twitter {
-              position: absolute;
-              top: 21%;
-          }
-
-          #twitch {
-              position: absolute;
-              top: 21%;
-              left: 31.5%;
-              width: 37.1%; 
-              height: 39%;
-          }
           
-          #twitchchat {
-              position: absolute;
-              top: 60%;
-              left: 31.5%;
-              width: 37.1%; 
-              height: 40%;
-          }
-          
-          #youtube {
-              position: absolute;
-              top: 21%;
-              left: 68.45%;
-              width: 31.25%; 
-              height: 38.74%;
-          }
-  
-          li {
-              float: left;
-          }
-
-          a {
-              display: block;
-              width: 60px;
-          }
-
       </style>
     </head>
 
     <body>
 
-        <h1>Atilla Bosma</h1>
-
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="/pettertale">Pettertale</a></li>
-        </ul>
-
-        <iframe id="twitch" src="https://player.twitch.tv/?channel=atillabosma" frameborder="0" scrolling="no"></iframe>
-        <iframe id="twitchchat" src="https://www.twitch.tv/atillabosma/chat?popout=" frameborder="0" scrolling="no"></iframe>
-        <script src="scripts/twitterscript.js"></script>
-
-        <div id="twitter"><a class="twitter-timeline" href="https://twitter.com/Atilla_Bosma" data-widget-id="587032631709163520">Tweets door @Atilla_Bosma</a>
-            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-        </div>
-        <iframe id="youtube" src="http://www.youtube.com/embed/?listType=user_uploads&list=atillabosma"></iframe>
-
+        <h1>nothing yet</h1>
     </body>
 </html>
