--- a/shitpost/index.html
+++ b/shitpost/index.html
@@ -3,13 +3,13 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-p {
+p, a {
   text-align: center;
   font-size: 60px;
   margin-top:0px;
 }
 
-#dbzfbest{
+#dbfzbest{
     display: block;
     margin-left: auto;
     margin-right: auto 
@@ -18,12 +18,13 @@ p {
 </style>
 </head>
 <body>
-<img id="dbzfbest" src="https://i.imgur.com/d1irYAn.gif">
-<p id="dbzfsoon"></p>
+<img id="dbfzbest" src="https://i.imgur.com/d1irYAn.gif">
+<p id="dbfzsoon"></p>
+<a id="dbfzlink"></a>
 
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("Jan 26, 2018 19:00:00").getTime();
+var countDownDate = new Date("Jan 25, 2018 19:00:00").getTime();
 
 var x = setInterval(function() {
 
@@ -35,12 +36,15 @@ var x = setInterval(function() {
     var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
     var seconds = Math.floor((distance % (1000 * 60)) / 1000);
     
-    document.getElementById("dbzfsoon").innerHTML = days + "d " + hours + "h "
+    document.getElementById("dbfzsoon").innerHTML = days + "d " + hours + "h "
     + minutes + "m " + seconds + "s ";
     
     if (distance < 0) {
         clearInterval(x);
-        document.getElementById("dbzfsoon").innerHTML = "WOO DBZF IS RELEASED!";
+        document.getElementById("dbfzbest").src = "https://media1.tenor.com/images/d16ccb3c61c7be781d152172b1bc63e2/tenor.gif";
+        document.getElementById("dbfzsoon").innerHTML = "IT'S OUT GET IT";
+        document.getElementById("dbfzlink").innerHTML = "STEAMLINK"
+        document.getElementById("dbfzlink").href = "http://store.steampowered.com/app/678950/DRAGON_BALL_FighterZ/"
     }
 }, 1000);
 </script>
