--- a/CapitaSelecta/nieuweversie.html
+++ b/CapitaSelecta/nieuweversie.html
@@ -35,7 +35,7 @@
             <h2 class="subheading">Waarom Amazon's web services het uitvoeren van Big Data Projecten veel makkelijker kan maken</h2>
             <span class="meta">Geschreven door
               <a href="#">Atilla Bosma</a>
-              op 25 Mei, 2019</span>
+              op 15 Juni, 2019</span>
           </div>
         </div>
       </div>
