Added leaguesandbox-default to history

--- a/LSPatchNotes/index.html
+++ b/LSPatchNotes/index.html
@@ -6,20 +6,22 @@
         <title>LeagueSandbox Patch Notes</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="The slowest moving patch 4.20 League remake.">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="stylesheet.css">
         <link rel="shortcut icon" type="image/png" href="favicon-96x96.png">
     </head>
 
     <body>
-        <img class="centerImage" src="patch-notes-image.png">
-        <div class="commitDiv">
-            <ul class="commitList">
+        <img class="topImage" src="patch-notes-image.png">
+        
+        <div class="commitContainer">
+            <div class="gameServerCommitDiv">
+                <h2>Game Server</h2>
+            </div>
 
-            </ul>
-        </div>
-
-        <div class="center">
-            <a href="https://github.com/LeagueSandbox/GameServer/commits/indev">Full Commit List</a>
+            <div class="defaultContentCommitDiv">
+                <h2>Default Content</h2>
+            </div>
         </div>
     </body>
 
