--- a/LSPatchNotes/index.html
+++ b/LSPatchNotes/index.html
@@ -16,21 +16,12 @@
     </head>
 
     <body>
-        <img class="rounded mx-auto d-block" src="patch-notes-image.png">
+        <img class="rounded mx-auto my-n5 d-block" src="patch-notes-image.png" style="max-width:35%">
 
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col">
-                    <h2>Game Server</h2>
-                    <ul id="gameServerCommitList"></ul>
-                </div>
-    
-                <div class="col">
-                    <h2>Default Content</h2>
-                    <ul id="defaultContentCommitList"></ul>
-                </div>
-            </div>
+        <div class="d-flex">
+            <ul class="list-inline mx-auto justify-content-center" id="gameServerCommitList"></ul>
         </div>
+        
     </body>
 
     <script src="load-information.js"></script>
