--- a/index.html
+++ b/index.html
@@ -1,24 +1,99 @@
 ﻿<!doctype html>
 
 <html lang="en">
-    <head>
-      <meta charset="utf-8">
+	<head>
+		<meta charset="utf-8">
+		<title>Atilla Bosma's Website</title>
+		<meta name="description" content="homepage">
+		<meta name="author" content="AtillaBosma">
+		<link rel="stylesheet" href="https://unpkg.com/xp.css">
+		<link rel="stylesheet" href="stylesheet.css">
+	</head>
 
-      <title>Atilla Bosma's Website</title>
-
-      <meta name="description" content="homepage">
-
-      <meta name="author" content="AtillaBosma">
-
-      <link rel="stylesheet" href="css/styles.css?v=1.0">
-
-      <style>
-          
-      </style>
-    </head>
-
-    <body>
-
-        <h1>nothing yet</h1>
-    </body>
+	<body class="surface">
+		<aside>
+			<ul class="tree-view">
+				<li>
+					<a href="./index.html">
+						<b>Main page</b>
+					</a>
+				</li>
+				<li>
+					<a href="./cv.html">
+						Curriculum Vitae / CV
+					</a>
+				</li>
+				<li>
+					<details closed>
+						<summary>Social media links</summary>
+						<ul>
+							<li>
+								<a href="https://www.linkedin.com/in/atilla-b-2365b49a">
+									LinkedIn
+								</a>
+							</li>
+							<li>
+								<a href="https://github.com/abosma">
+									Github
+								</a>
+							</li>
+							<li>
+								<a href="https://twitter.com/Atilla_Bosma">
+									Twitter
+								</a>
+							</li>
+						</ul>
+					</details>
+				</li>
+				<li>
+					<details closed>
+						<summary>Small, fun sideprojects</summary>
+						<ul>
+							<li>
+								<a href="https://github.com/abosma/WindowsXPDiscordTheme">
+									Windows XP Discord Theme
+								</a>
+							</li>
+							<li>
+								<a href="https://github.com/abosma/twitchPlaysStreetfighter">
+									Twitch Plays Street Fighter Bot
+								</a>
+							</li>
+							<li>
+								<a href="./LSPatchNotes/index.html">
+									LeagueSandbox Patch Notes
+								</a>
+							</li>
+							<li>
+								<details closed>
+									<summary>Unity Projects</summary>
+									<ul>
+										<li>
+											<a href="./MapGenerator/index.html">
+												Map Generator
+											</a>
+										</li>
+										<li>
+											<a href="./Stadium/index.html">
+												Tekken 1 Stadium
+											</a>
+										</li>
+										<li>
+											<a href="./DestructionMan/index.html">
+												DestructionMan
+											</a>
+										</li>
+									</ul>
+								</details>
+							</li>
+						</ul>
+					</details>
+				</li>
+			</ul>
+		</aside>
+		<main>
+			<h3>Atilla Bosma's Website</h3>
+			<p>hi this is w.i.p.</p>
+		</main>
+	</body>
 </html>
