Full update of personal website

--- a/index.html
+++ b/index.html
@@ -6,94 +6,28 @@
 		<title>Atilla Bosma's Website</title>
 		<meta name="description" content="homepage">
 		<meta name="author" content="AtillaBosma">
-		<link rel="stylesheet" href="https://unpkg.com/xp.css">
+		<link href="https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,800;1,900&display=swap" rel="stylesheet"> 
 		<link rel="stylesheet" href="stylesheet.css">
+		<link rel="icon" type="image/png" href="Icons/favicon.png">
 	</head>
 
-	<body class="surface">
-		<aside>
-			<ul class="tree-view">
-				<li>
-					<a href="./index.html">
-						<b>Main page</b>
-					</a>
-				</li>
-				<li>
-					<a href="./cv.html">
-						Curriculum Vitae / CV
-					</a>
-				</li>
-				<li>
-					<details closed>
-						<summary>Social media links</summary>
-						<ul>
-							<li>
-								<a href="https://www.linkedin.com/in/atilla-b-2365b49a">
-									LinkedIn
-								</a>
-							</li>
-							<li>
-								<a href="https://github.com/abosma">
-									Github
-								</a>
-							</li>
-							<li>
-								<a href="https://twitter.com/Atilla_Bosma">
-									Twitter
-								</a>
-							</li>
-						</ul>
-					</details>
-				</li>
-				<li>
-					<details closed>
-						<summary>Small, fun sideprojects</summary>
-						<ul>
-							<li>
-								<a href="https://github.com/abosma/WindowsXPDiscordTheme">
-									Windows XP Discord Theme
-								</a>
-							</li>
-							<li>
-								<a href="https://github.com/abosma/twitchPlaysStreetfighter">
-									Twitch Plays Street Fighter Bot
-								</a>
-							</li>
-							<li>
-								<a href="./LSPatchNotes/index.html">
-									LeagueSandbox Patch Notes
-								</a>
-							</li>
-							<li>
-								<details closed>
-									<summary>Unity Projects</summary>
-									<ul>
-										<li>
-											<a href="./MapGenerator/index.html">
-												Map Generator
-											</a>
-										</li>
-										<li>
-											<a href="./Stadium/index.html">
-												Tekken 1 Stadium
-											</a>
-										</li>
-										<li>
-											<a href="./DestructionMan/index.html">
-												DestructionMan
-											</a>
-										</li>
-									</ul>
-								</details>
-							</li>
-						</ul>
-					</details>
-				</li>
-			</ul>
-		</aside>
+	<body>
 		<main>
-			<h3>Atilla Bosma's Website</h3>
-			<p>hi this is w.i.p.</p>
+			<h1>
+				Hey, I'm Atilla Bosma<br/>
+				Recently graduated Software Developer<br/>
+				Hobbyist Game Developer/Video Editor <br/>
+				Web Developer in learning
+			</h1>
+			<h2>
+				Social Media Links <br/><br/>
+				<a class="tooltip bottom linkedin" href="https://www.linkedin.com/in/atilla-b-2365b49a/"><img src="Icons/LinkedinIcon.png" width="48" height="48"></a>
+				<a class="tooltip bottom github" href="https://github.com/abosma"><img src="Icons/GithubIcon.png" width="48" height="48"></a>
+				<a class="tooltip bottom twitter" href="https://twitter.com/Atilla_Bosma"><img src="Icons/TwitterIcon.png" width="48" height="48"></a>
+			</h2>
+			<h2>
+				<a href="/cv">Curriculum Vitae</a>
+			</h2>
 		</main>
 	</body>
 </html>
