--- a/cv/index.html
+++ b/cv/index.html
@@ -6,9 +6,11 @@
 		<title>Atilla Bosma's Website</title>
 		<meta name="description" content="homepage">
 		<meta name="author" content="AtillaBosma">
+		<link rel="stylesheet" href="stylesheet.css">
+		<link rel="icon" type="image/png" href="../Icons/favicon.png">
     </head>
 </html>
 
 <body>
-	nothing yet
+	<img id="CVImage" src="CV.png"></img>
 </body>
