Updated CV page and added pdf download

--- a/cv/index.html
+++ b/cv/index.html
@@ -12,5 +12,7 @@
 </html>
 
 <body>
+	<h1>Curriculum Vitae</h1>
+	<h3><a href="CV.pdf">Download PDF</a></h3>
 	<img id="CVImage" src="CV.png"></img>
 </body>
