--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 				<a class="tooltip bottom twitter" href="https://twitter.com/Atilla_Bosma"><img src="Icons/TwitterIcon.png" width="48" height="48"></a>
 			</h2>
 			<h2>
+				Status: Available for work <br/><br/>
 				<a href="/cv">Curriculum Vitae</a>
 			</h2>
 		</main>
