Better favicon and updated linkedin link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			</h1>
 			<h2>
 				Social Media Links <br/><br/>
-				<a class="tooltip bottom linkedin" href="https://www.linkedin.com/in/atilla-b-2365b49a/"><img src="Icons/LinkedinIcon.png" width="48" height="48"></a>
+				<a class="tooltip bottom linkedin" href="https://www.linkedin.com/in/atilla-bosma/"><img src="Icons/LinkedinIcon.png" width="48" height="48"></a>
 				<a class="tooltip bottom github" href="https://github.com/abosma"><img src="Icons/GithubIcon.png" width="48" height="48"></a>
 				<a class="tooltip bottom twitter" href="https://twitter.com/Atilla_Bosma"><img src="Icons/TwitterIcon.png" width="48" height="48"></a>
 			</h2>
