Changed title of pages

--- a/cv/index.html
+++ b/cv/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Atilla Bosma's Website</title>
+		<title>Atilla Bosma | CV</title>
 		<meta name="description" content="homepage">
 		<meta name="author" content="AtillaBosma">
 		<link rel="stylesheet" href="stylesheet.css">
