--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Atilla Bosma's Website</title>
+		<title>Atilla Bosma | Back-end Software Developer</title>
 		<meta name="description" content="homepage">
 		<meta name="author" content="AtillaBosma">
 		<link href="https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,800;1,900&display=swap" rel="stylesheet"> 
