Updating personal website for a better look

--- a/index.html
+++ b/index.html
@@ -6,29 +6,30 @@
 		<title>Atilla Bosma | Back-end Software Developer</title>
 		<meta name="description" content="homepage">
 		<meta name="author" content="AtillaBosma">
-		<link href="https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,800;1,900&display=swap" rel="stylesheet"> 
 		<link rel="stylesheet" href="stylesheet.css">
 		<link rel="icon" type="image/png" href="Icons/favicon.png">
 	</head>
 
 	<body>
 		<main>
-			<h1>
-				Hey, I'm Atilla Bosma<br/>
-				Recently graduated Software Developer<br/>
-				Hobbyist Game Developer/Video Editor <br/>
-				Web Developer in learning
-			</h1>
-			<h2>
-				Social Media Links <br/><br/>
-				<a class="tooltip bottom linkedin" href="https://www.linkedin.com/in/atilla-bosma/"><img src="Icons/LinkedinIcon.png" width="48" height="48"></a>
-				<a class="tooltip bottom github" href="https://github.com/abosma"><img src="Icons/GithubIcon.png" width="48" height="48"></a>
-				<a class="tooltip bottom twitter" href="https://twitter.com/Atilla_Bosma"><img src="Icons/TwitterIcon.png" width="48" height="48"></a>
-			</h2>
-			<h2>
-				Status: Available for work <br/><br/>
-				<a href="/cv">Curriculum Vitae</a>
-			</h2>
+			<h3 class="introduction">Hey, my name is</h3>
+			<h1 class="name">Atilla Bosma</h1>
+			
+			<p class="subheading">
+				I'm a recently graduated Software Developer specialized in back-end<br/> 
+				programming, currently in the progress of learning front-end design.<br/><br/>
+				Most recent personal projects involve toying with <a href="https://www.redblobgames.com/maps/terrain-from-noise/">World Generation</a><br/> 
+				and <a href="https://www.youtube.com/watch?v=7axImc1sxa0">Universe Simulation</a> in Unity. <br/><br/>
+				Currently looking for new and interesting projects to work on.<br/><br/>
+				If you've got one for me, e-mail or message me. You can find my CV <a href="/cv">here.</a>
+				
+			</p>
 		</main>
+		<div class="social-media">
+			<h3><a href="mailto:atillabosma@hotmail.com">e-mail</a></h3>
+			<h3><a href="https://www.linkedin.com/in/atilla-bosma/">linkedin</a></h3>
+			<h3><a href="https://www.github.com/abosma">github</a></h3>
+			<h3><a href="https://www.twitter.com/Atilla_Bosma">twitter</a></h3>
+		</div>
 	</body>
 </html>
