--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 		<meta name="author" content="AtillaBosma">
 		<link rel="stylesheet" href="stylesheet.css">
 		<link rel="icon" type="image/png" href="Icons/favicon.png">
+		<meta property="og:site_name" content="Name of your website">
+		<meta property="og:url" content="https://abosma.com">
+		<meta property="og:title" content="AtillaBosma's Homepage">
+		<meta property="og:description" content="Website sucks :)">
+		<meta property="og:type" content="website">
+		<meta name="og:image" itemprop="image" content="Icons/favicon.png">
 	</head>
 
 	<body>
