Updated personal page
-- Removed phone number from CV due to recruiters calling me randomly

-- Added the text that I got hired as IT consultant

--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
 		<main>
 			<h3 class="introduction">Hey, my name is</h3>
 			<h1 class="name">Atilla Bosma</h1>
-			
 			<p class="subheading">
 				I'm a recently graduated Software Developer specialized in back-end<br/> 
 				programming, currently in the progress of learning front-end design.<br/><br/>
 				Most recent personal projects involve toying with <a href="https://www.redblobgames.com/maps/terrain-from-noise/">World Generation</a><br/> 
 				and <a href="https://www.youtube.com/watch?v=7axImc1sxa0">Universe Simulation</a> in Unity. <br/><br/>
-				Currently looking for new and interesting projects to work on.<br/><br/>
-				If you've got one for me, e-mail or message me. You can find my CV <a href="/cv">here.</a>
-				
+				I recently got hired as an IT Consultant, and I'm not looking for a new project currently.<br/>
+				Thank you to all the recruiters for helping me find a job!<br/><br/>
+				If you are still interested in looking at my CV, you can find it <a href="/cv">here.</a>
 			</p>
 		</main>
 		<div class="social-media">
