Changed the description to fit the page better

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Atilla Bosma | Back-end Software Developer</title>
+		<description>Atilla Bosma's personal page of fun and mystery</description>
 		<meta name="description" content="homepage">
 		<meta name="author" content="AtillaBosma">
 		<link rel="stylesheet" href="stylesheet.css">
@@ -11,7 +12,7 @@
 		<meta property="og:site_name" content="Name of your website">
 		<meta property="og:url" content="https://abosma.com">
 		<meta property="og:title" content="AtillaBosma's Homepage">
-		<meta property="og:description" content="Website sucks :)">
+		<meta property="og:description" content="Atilla Bosma's personal page of fun and mystery">
 		<meta property="og:type" content="website">
 		<meta name="og:image" itemprop="image" content="Icons/favicon.png">
 	</head>
