Added a player list that updates on connections

--- a/connectfour/index.html
+++ b/connectfour/index.html
@@ -13,9 +13,15 @@
     </head>
 
     <body>
-        <h1 id="localPeerId"></h1>
+        <h3 id="localPeerId"></h3>
         <input id="remotePeerId"></input>
         <button id="connectButton">Connect</button>
+
+        <ul id="playerList">
+            
+        </ul>
+
+
         <script src="./scripts/webrtc.js"></script>
     </body>
 </html>
