Added a chat system for player interaction
- Added a way to chat, currently messages are just list items appended on data receive.

- Changed the way connection event listeners are initialized. Results in less promise chaining.

--- a/connectfour/index.html
+++ b/connectfour/index.html
@@ -14,13 +14,16 @@
 
     <body>
         <h3 id="localPeerId"></h3>
+
         <input id="remotePeerId"></input>
         <button id="connectButton">Connect</button>
+        <ul id="playerList"></ul>
 
-        <ul id="playerList">
-            
-        </ul>
+        </br>
 
+        <input id="chatInput"></input>
+        <button id="chatSendButton">Send</button>
+        <ul id="chat"></ul>
 
         <script src="./scripts/webrtc.js"></script>
     </body>
