--- a/tstest/index.html
+++ b/tstest/index.html
@@ -18,7 +18,7 @@
 	</head>
 
 	<body>
-        <canvas id="canvas"></canvas>
+        <canvas id="canvas" width="1280" height="720"></canvas>
 		<script src="./game.js" type="module"></script>
 	</body>
 </html>
